@@ -1,3 +1,10 @@
+2007-05-21  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_sm.erl: Updated the session table to store
+	additional session info
+	* src/ejabberd_c2s.erl: Report IP address to ejabberd_sm (thanks
+	to Christophe Romain)
+
 2007-05-18  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/msgs/zh.msg: New chinese translation (thanks to Shelley
